# homechat

./: '  .clang-format  README.md  client.sh  server.sh
client/: CMakeLists.txt  compile_commands.json
client/.cache/clangd/index/: Main.cpp.59B438EDC5609780.idx  colors.h.9CBF675E9831E6F4.idx  easywsclient.cpp.BE266B8089055DD7.idx  easywsclient.hpp.B24A8CEEA47FACB9.idx
client/src/: Main.cpp  easywsclient.cpp
client/src/include/: colors.h  easywsclient.hpp
server/: CMakeLists.txt  compile_commands.json
server/.cache/clangd/index/: Main.cpp.3A7DAD75EE1835F0.idx  MessageCache.cpp.C00C31C15AF0039C.idx  MessageCache.hpp.EA225B528CC272FD.idx
server/src/: Main.cpp  MessageCache.cpp
server/src/include/: DateTime.hpp  MessageCache.hpp
